Fix wrapper spacing

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ header {
 	display: flex;
 	align-content: center;
 	justify-content: center;
-	height: 22vh;
+	height: 18vh;
 }
 
 h1 {
